# RK800

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  client.tar  common.h  config_test.py  cross_comp.sh  error.txt  install_deps.sh  pyproject.toml  requirements.txt  string_obf.h
SystemCache/: settings.gradle.kts
SystemCache/app/: build.gradle.kts
SystemCache/app/src/androidTest/java/com/android/systemcache/: ExampleInstrumentedTest.kt
SystemCache/app/src/main/: AndroidManifest.xml
SystemCache/app/src/main/java/com/android/systemcache/: BootReceiver.java  InitActivity.java  InitWorker.java  PrimeActivity.java  SyncWorker.java  SystemCacheApplication.java  TestActivity.java
SystemCache/app/src/test/java/com/android/systemcache/: ExampleUnitTest.kt
SystemCache/gradle/: libs.versions.toml
SystemCache/gradle/wrapper/: gradle-wrapper.properties
client/: CMakeLists.txt
client/core/: CMakeLists.txt  client_config.c  common.c  networking.c
client/core/networking/: CMakeLists.txt  networking.c  tls_mngr.c
client/core/work/: CMakeLists.txt  echo.c  error.c  get.c  ls.c  put.c  work.c
client/include/: client.h  client_config.h  common.h  string_obf.h
client/include/networking/: networking.h  tls_mngr.h
client/include/work/: echo.h  error.h  get.h  ls.h  put.h  work.h
client/src/: CMakeLists.txt  client.c  entry.c
client/test/: test_client.c  test_tls.c
daemon/: CMakeLists.txt
daemon/core/: CMakeLists.txt  common.c  daemon_config.c
daemon/include/: common.h  daemon_config.h
daemon/src/: CMakeLists.txt  entry.c  main.c
loader/: .gitignore  CMakeLists.txt  settings.gradle.kts
loader/app/: build.gradle.kts
loader/app/src/androidTest/java/com/android/systemcache/: ExampleInstrumentedTest.java
loader/app/src/main/: AndroidManifest.xml
loader/app/src/main/java/com/android/systemcache/: BootReceiver.java  SystemCacheService.java
loader/app/src/main/res/values/: strings.xml  themes.xml
loader/app/src/main/res/values-night/: themes.xml
loader/app/src/test/java/com/android/systemcache/: ExampleUnitTest.java
loader/core/: CMakeLists.txt  common.c
loader/gradle/wrapper/: gradle-wrapper.properties
loader/src/: CMakeLists.txt  main.c
rk800/: __main__.py  apk_repack.py  app-signed.apk.idsig  command.py  command_types.py  configure.py  context.py  oops.txt  parse.py  rk800.py  tls.py  tls_cert.py  view.py
rk800/networking/: connection.py  exceptions.py  packet.py  server.py  tls.py
rk800/work/: base.py  echo.py  error.py  get.py  ls.py  put.py  queue.py  result.py
