[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rk800"
version = "0.0.1"
description = "RK800 Android C2 Framework"
requires-python = ">=3.8"
dependencies = [
    "tabulate",
    "prompt-toolkit",
    "cryptography",
]

[project.scripts]
rk800 = "rk800.__main__:main"

[tool.setuptools.packages.find]
include = ["rk800*"]

[tool.setuptools.package-data]
rk800 = ["assets/*.so", "assets/*.apk", "assets/*.keystore"]